--- a/app1/package.json
+++ b/app1/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "run-p dev:vite dev:sslproxy",
     "dev:vite": "vite --port 15173",
-    "dev:sslproxy": "local-ssl-proxy --key ../lo.lib-bib.com-key.pem --cert ../lo.lib-bib.com.pem --source 5173 --target 15173",
+    "dev:sslproxy": "local-ssl-proxy --key ../lo.dev.apps-fracta-leap.com-key.pem --cert ../lo.dev.apps-fracta-leap.com.pem --source 5173 --target 15173",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
